Colaboratory を使用して作成しました

--- a/Pytorch_転移学習調整中_Applstra_attention_residual_network.ipynb
+++ b/Pytorch_転移学習調整中_Applstra_attention_residual_network.ipynb
@@ -487,7 +487,7 @@
       "metadata": {
         "id": "DKESX-DMOsF4",
         "colab_type": "code",
-        "outputId": "98968da3-3bca-4b74-9909-2900478fe574",
+        "outputId": "3bc118b5-5b59-41c5-c1e4-03d42bdb814f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -1082,6 +1082,16 @@
         "    return model\n",
         "\n",
         "\n",
+        "def resnetARN50(pretrained=False, **kwargs):\n",
+        "    \"\"\"Constructs a ResNet-18 model.\n",
+        "    Args:\n",
+        "        pretrained (bool): If True, returns a model pre-trained on ImageNet\n",
+        "    \"\"\"\n",
+        "    model = ResNet_ARN(BasicBlock, [3, 4, 6, 3], **kwargs)\n",
+        "    return model\n",
+        "\n",
+        "\n",
+        "\n",
         "'''\n",
         "def resnet18(pretrained=False, **kwargs):\n",
         "    \"\"\"Constructs a ResNet-18 model.\n",
@@ -1096,7 +1106,7 @@
         "    return model\n",
         "'''\n"
       ],
-      "execution_count": 4,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1108,7 +1118,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 29
         }
       ]
     },
@@ -1157,113 +1167,153 @@
       "metadata": {
         "id": "2dJ0F8cQmF_c",
         "colab_type": "code",
-        "outputId": "6a28f159-e2a9-4a8d-860b-b4dbec4a8898",
+        "outputId": "8d8094f5-9163-4758-a9c9-11f2a600d0b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
       "source": [
-        "model_ft = resnetARN18()\n",
+        "model_ft = resnetARN50()\n",
         "num_ftrs = model_ft.fc.in_features\n",
         "model_ft.fc = nn.Linear(num_ftrs, 2)\n",
         "\n",
+        "#print(model_ft)\n",
+        "model_ft = print(list(model_ft.children())[:7])\n",
+        "print(model_ft)\n",
+        "'''\n",
         "model_ft = model_ft.to(device)\n",
         "\n",
         "#print(model_ft)\n",
         "\n",
         "#モデルのサマリー（省略可）\n",
         "from torchsummary import summary\n",
-        "summary(model_ft, (3, 224, 224))\n"
+        "summary(model_ft, (3, 224, 224))\n",
+        "'''\n"
       ],
-      "execution_count": 17,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "----------------------------------------------------------------\n",
-            "        Layer (type)               Output Shape         Param #\n",
-            "================================================================\n",
-            "            Conv2d-1         [-1, 64, 112, 112]           9,408\n",
-            "       BatchNorm2d-2         [-1, 64, 112, 112]             128\n",
-            "              ReLU-3         [-1, 64, 112, 112]               0\n",
-            "         MaxPool2d-4           [-1, 64, 56, 56]               0\n",
-            "            Conv2d-5           [-1, 64, 56, 56]          36,864\n",
-            "       BatchNorm2d-6           [-1, 64, 56, 56]             128\n",
-            "              ReLU-7           [-1, 64, 56, 56]               0\n",
-            "            Conv2d-8           [-1, 64, 56, 56]          36,864\n",
-            "       BatchNorm2d-9           [-1, 64, 56, 56]             128\n",
-            "             ReLU-10           [-1, 64, 56, 56]               0\n",
-            "       BasicBlock-11           [-1, 64, 56, 56]               0\n",
-            "           Conv2d-12           [-1, 64, 56, 56]          36,864\n",
-            "      BatchNorm2d-13           [-1, 64, 56, 56]             128\n",
-            "             ReLU-14           [-1, 64, 56, 56]               0\n",
-            "           Conv2d-15           [-1, 64, 56, 56]          36,864\n",
-            "      BatchNorm2d-16           [-1, 64, 56, 56]             128\n",
-            "             ReLU-17           [-1, 64, 56, 56]               0\n",
-            "       BasicBlock-18           [-1, 64, 56, 56]               0\n",
-            "           Conv2d-19          [-1, 128, 28, 28]          73,728\n",
-            "      BatchNorm2d-20          [-1, 128, 28, 28]             256\n",
-            "             ReLU-21          [-1, 128, 28, 28]               0\n",
-            "           Conv2d-22          [-1, 128, 28, 28]         147,456\n",
-            "      BatchNorm2d-23          [-1, 128, 28, 28]             256\n",
-            "           Conv2d-24          [-1, 128, 28, 28]           8,192\n",
-            "      BatchNorm2d-25          [-1, 128, 28, 28]             256\n",
-            "             ReLU-26          [-1, 128, 28, 28]               0\n",
-            "       BasicBlock-27          [-1, 128, 28, 28]               0\n",
-            "           Conv2d-28          [-1, 128, 28, 28]         147,456\n",
-            "      BatchNorm2d-29          [-1, 128, 28, 28]             256\n",
-            "             ReLU-30          [-1, 128, 28, 28]               0\n",
-            "           Conv2d-31          [-1, 128, 28, 28]         147,456\n",
-            "      BatchNorm2d-32          [-1, 128, 28, 28]             256\n",
-            "             ReLU-33          [-1, 128, 28, 28]               0\n",
-            "       BasicBlock-34          [-1, 128, 28, 28]               0\n",
-            "           Conv2d-35          [-1, 256, 14, 14]         294,912\n",
-            "      BatchNorm2d-36          [-1, 256, 14, 14]             512\n",
-            "             ReLU-37          [-1, 256, 14, 14]               0\n",
-            "           Conv2d-38          [-1, 256, 14, 14]         589,824\n",
-            "      BatchNorm2d-39          [-1, 256, 14, 14]             512\n",
-            "           Conv2d-40          [-1, 256, 14, 14]          32,768\n",
-            "      BatchNorm2d-41          [-1, 256, 14, 14]             512\n",
-            "             ReLU-42          [-1, 256, 14, 14]               0\n",
-            "       BasicBlock-43          [-1, 256, 14, 14]               0\n",
-            "           Conv2d-44          [-1, 256, 14, 14]         589,824\n",
-            "      BatchNorm2d-45          [-1, 256, 14, 14]             512\n",
-            "             ReLU-46          [-1, 256, 14, 14]               0\n",
-            "           Conv2d-47          [-1, 256, 14, 14]         589,824\n",
-            "      BatchNorm2d-48          [-1, 256, 14, 14]             512\n",
-            "             ReLU-49          [-1, 256, 14, 14]               0\n",
-            "       BasicBlock-50          [-1, 256, 14, 14]               0\n",
-            "           Conv2d-51            [-1, 512, 7, 7]       1,179,648\n",
-            "      BatchNorm2d-52            [-1, 512, 7, 7]           1,024\n",
-            "             ReLU-53            [-1, 512, 7, 7]               0\n",
-            "           Conv2d-54            [-1, 512, 7, 7]       2,359,296\n",
-            "      BatchNorm2d-55            [-1, 512, 7, 7]           1,024\n",
-            "           Conv2d-56            [-1, 512, 7, 7]         131,072\n",
-            "      BatchNorm2d-57            [-1, 512, 7, 7]           1,024\n",
-            "             ReLU-58            [-1, 512, 7, 7]               0\n",
-            "       BasicBlock-59            [-1, 512, 7, 7]               0\n",
-            "           Conv2d-60            [-1, 512, 7, 7]       2,359,296\n",
-            "      BatchNorm2d-61            [-1, 512, 7, 7]           1,024\n",
-            "             ReLU-62            [-1, 512, 7, 7]               0\n",
-            "           Conv2d-63            [-1, 512, 7, 7]       2,359,296\n",
-            "      BatchNorm2d-64            [-1, 512, 7, 7]           1,024\n",
-            "             ReLU-65            [-1, 512, 7, 7]               0\n",
-            "       BasicBlock-66            [-1, 512, 7, 7]               0\n",
-            "AdaptiveAvgPool2d-67            [-1, 512, 1, 1]               0\n",
-            "           Linear-68                    [-1, 2]           1,026\n",
-            "================================================================\n",
-            "Total params: 11,177,538\n",
-            "Trainable params: 11,177,538\n",
-            "Non-trainable params: 0\n",
-            "----------------------------------------------------------------\n",
-            "Input size (MB): 0.57\n",
-            "Forward/backward pass size (MB): 62.79\n",
-            "Params size (MB): 42.64\n",
-            "Estimated Total Size (MB): 106.00\n",
-            "----------------------------------------------------------------\n"
+            "[Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False), BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True), ReLU(inplace=True), MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False), Sequential(\n",
+            "  (0): BasicBlock(\n",
+            "    (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  )\n",
+            "  (1): BasicBlock(\n",
+            "    (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  )\n",
+            "  (2): BasicBlock(\n",
+            "    (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  )\n",
+            "), Sequential(\n",
+            "  (0): BasicBlock(\n",
+            "    (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (downsample): Sequential(\n",
+            "      (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+            "      (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    )\n",
+            "  )\n",
+            "  (1): BasicBlock(\n",
+            "    (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  )\n",
+            "  (2): BasicBlock(\n",
+            "    (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  )\n",
+            "  (3): BasicBlock(\n",
+            "    (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  )\n",
+            "), Sequential(\n",
+            "  (0): BasicBlock(\n",
+            "    (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (downsample): Sequential(\n",
+            "      (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+            "      (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    )\n",
+            "  )\n",
+            "  (1): BasicBlock(\n",
+            "    (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  )\n",
+            "  (2): BasicBlock(\n",
+            "    (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  )\n",
+            "  (3): BasicBlock(\n",
+            "    (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  )\n",
+            "  (4): BasicBlock(\n",
+            "    (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  )\n",
+            "  (5): BasicBlock(\n",
+            "    (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "    (relu): ReLU(inplace=True)\n",
+            "    (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+            "    (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+            "  )\n",
+            ")]\n",
+            "None\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nmodel_ft = model_ft.to(device)\\n\\n#print(model_ft)\\n\\n#モデルのサマリー（省略可）\\nfrom torchsummary import summary\\nsummary(model_ft, (3, 224, 224))\\n'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
         }
       ]
     },
