--- a/Attention_branch_network_Github.ipynb
+++ b/Attention_branch_network_Github.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Untitled47.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOYx7/8LNylhNQFfhCxUTAJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +24,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aAahyg9NIph3",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Attention branch networkをcolabで実装\n",
+        "https://github.com/machine-perception-robotics-group/attention_branch_network"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "-FK0-DdivLFm",
         "colab_type": "code",
+        "outputId": "abe8bfdd-0fa3-4dc6-c589-26e849cfc375",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 107
-        },
-        "outputId": "6c7ab3c0-394d-425f-9a2a-c646225e28ce"
+          "height": 178
+        }
       },
       "source": [
         "from google.colab import drive\n",
@@ -45,14 +55,18 @@
         "!date -R\n",
         "!ls\n"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "Fri, 10 Apr 2020 06:28:04 +0000\n",
-            "Fri, 10 Apr 2020 06:28:07 +0000\n",
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n",
+            "Mon, 13 Apr 2020 06:03:13 +0000\n",
+            "Mon, 13 Apr 2020 06:03:19 +0000\n",
             "attention_branch_network-master  drive\tsample_data\n"
           ],
           "name": "stdout"
@@ -64,18 +78,18 @@
       "metadata": {
         "id": "WpTizePnxmit",
         "colab_type": "code",
+        "outputId": "6a785e9a-870a-4e77-dec2-159053598960",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "734f718a-133c-4831-85c9-ea80610ec6b9"
+        }
       },
       "source": [
         "import os\n",
         "os.chdir('/content/attention_branch_network-master')\n",
         "!ls"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,18 +104,51 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qm-j3mlhx57G",
+        "id": "cL1jZH6AI9QL",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 285
+          "height": 175
         },
-        "outputId": "16edc142-cefd-41cf-82f2-121cb8222744"
+        "outputId": "7f0529aa-c29f-4b17-eca6-e7f48c96f18d"
+      },
+      "source": [
+        "!python3 imagenet.py --workers"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "usage: imagenet.py [-h] [-d DATA] [-j N] [--epochs N] [--start-epoch N]\n",
+            "                   [--train-batch N] [--test-batch N] [--lr LR]\n",
+            "                   [--drop Dropout] [--schedule SCHEDULE [SCHEDULE ...]]\n",
+            "                   [--gamma GAMMA] [--momentum M] [--weight-decay W] [-c PATH]\n",
+            "                   [--resume PATH] [--arch ARCH] [--depth DEPTH]\n",
+            "                   [--cardinality CARDINALITY] [--base-width BASE_WIDTH]\n",
+            "                   [--widen-factor WIDEN_FACTOR] [--manualSeed MANUALSEED]\n",
+            "                   [-e] [--pretrained] [--gpu-id GPU_ID]\n",
+            "imagenet.py: error: argument -j/--workers: expected one argument\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qm-j3mlhx57G",
+        "colab_type": "code",
+        "outputId": "16edc142-cefd-41cf-82f2-121cb8222744",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 285
+        }
       },
       "source": [
         "!python3 imagenet.py"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,16 +177,16 @@
       "metadata": {
         "id": "XtjU6_K24oXk",
         "colab_type": "code",
+        "outputId": "fab613c3-6cab-4dc6-ce4c-5b6745207ad9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
-        },
-        "outputId": "fab613c3-6cab-4dc6-ce4c-5b6745207ad9"
+        }
       },
       "source": [
         "use_cuda"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
