Colaboratory を使用して作成しました

--- a/Attention_branch_network_Github.ipynb
+++ b/Attention_branch_network_Github.ipynb
@@ -5,12 +5,14 @@
     "colab": {
       "name": "Untitled47.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -39,7 +41,7 @@
       "metadata": {
         "id": "-FK0-DdivLFm",
         "colab_type": "code",
-        "outputId": "abe8bfdd-0fa3-4dc6-c589-26e849cfc375",
+        "outputId": "17c8a620-8cbc-4642-ba7c-c07b14908d9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
@@ -55,7 +57,7 @@
         "!date -R\n",
         "!ls\n"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,8 +67,8 @@
             "Enter your authorization code:\n",
             "··········\n",
             "Mounted at /content/drive\n",
-            "Mon, 13 Apr 2020 06:03:13 +0000\n",
-            "Mon, 13 Apr 2020 06:03:19 +0000\n",
+            "Mon, 13 Apr 2020 06:10:28 +0000\n",
+            "Mon, 13 Apr 2020 06:10:32 +0000\n",
             "attention_branch_network-master  drive\tsample_data\n"
           ],
           "name": "stdout"
@@ -78,7 +80,7 @@
       "metadata": {
         "id": "WpTizePnxmit",
         "colab_type": "code",
-        "outputId": "6a785e9a-870a-4e77-dec2-159053598960",
+        "outputId": "3435bad3-01b4-4ca9-af34-f4b558d33fc5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -89,7 +91,7 @@
         "os.chdir('/content/attention_branch_network-master')\n",
         "!ls"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,14 +110,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 175
+          "height": 862
         },
-        "outputId": "7f0529aa-c29f-4b17-eca6-e7f48c96f18d"
+        "outputId": "43b1c8d0-3b37-4fd3-f737-276d03865a2d"
       },
       "source": [
-        "!python3 imagenet.py --workers"
+        "#HELPを参照\n",
+        "!python3 imagenet.py -h"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +131,46 @@
             "                   [--cardinality CARDINALITY] [--base-width BASE_WIDTH]\n",
             "                   [--widen-factor WIDEN_FACTOR] [--manualSeed MANUALSEED]\n",
             "                   [-e] [--pretrained] [--gpu-id GPU_ID]\n",
-            "imagenet.py: error: argument -j/--workers: expected one argument\n"
+            "\n",
+            "PyTorch ImageNet Training\n",
+            "\n",
+            "optional arguments:\n",
+            "  -h, --help            show this help message and exit\n",
+            "  -d DATA, --data DATA\n",
+            "  -j N, --workers N     number of data loading workers (default: 4)\n",
+            "  --epochs N            number of total epochs to run\n",
+            "  --start-epoch N       manual epoch number (useful on restarts)\n",
+            "  --train-batch N       train batchsize (default: 256)\n",
+            "  --test-batch N        test batchsize (default: 200)\n",
+            "  --lr LR, --learning-rate LR\n",
+            "                        initial learning rate\n",
+            "  --drop Dropout, --dropout Dropout\n",
+            "                        Dropout ratio\n",
+            "  --schedule SCHEDULE [SCHEDULE ...]\n",
+            "                        Decrease learning rate at these epochs.\n",
+            "  --gamma GAMMA         LR is multiplied by gamma on schedule.\n",
+            "  --momentum M          momentum\n",
+            "  --weight-decay W, --wd W\n",
+            "                        weight decay (default: 1e-4)\n",
+            "  -c PATH, --checkpoint PATH\n",
+            "                        path to save checkpoint (default: checkpoint)\n",
+            "  --resume PATH         path to latest checkpoint (default: none)\n",
+            "  --arch ARCH, -a ARCH  model architecture: resnet101 | resnet152 | resnet18 |\n",
+            "                        resnet34 | resnet50 | se_resnet_101 | se_resnet_152 |\n",
+            "                        se_resnet_18 | se_resnet_34 | se_resnet_50 (default:\n",
+            "                        resnet18)\n",
+            "  --depth DEPTH         Model depth.\n",
+            "  --cardinality CARDINALITY\n",
+            "                        ResNet cardinality (group).\n",
+            "  --base-width BASE_WIDTH\n",
+            "                        ResNet base width.\n",
+            "  --widen-factor WIDEN_FACTOR\n",
+            "                        Widen factor. 4 -> 64, 8 -> 128, ...\n",
+            "  --manualSeed MANUALSEED\n",
+            "                        manual seed\n",
+            "  -e, --evaluate        evaluate model on validation set\n",
+            "  --pretrained          use pre-trained model\n",
+            "  --gpu-id GPU_ID       id(s) for CUDA_VISIBLE_DEVICES\n"
           ],
           "name": "stdout"
         }
@@ -139,34 +181,29 @@
       "metadata": {
         "id": "Qm-j3mlhx57G",
         "colab_type": "code",
-        "outputId": "16edc142-cefd-41cf-82f2-121cb8222744",
+        "outputId": "6034caec-115a-4908-f6f4-d3a46deac954",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 285
+          "height": 195
         }
       },
       "source": [
-        "!python3 imagenet.py"
+        "!python3 imagenet.py -d \"/content/drive/My Drive/Deep_learning/applstra\""
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.6/dist-packages/torchvision/transforms/transforms.py:704: UserWarning: The use of the transforms.RandomSizedCrop transform is deprecated, please use transforms.RandomResizedCrop instead.\n",
             "  \"please use transforms.RandomResizedCrop instead.\")\n",
-            "Traceback (most recent call last):\n",
-            "  File \"imagenet.py\", line 399, in <module>\n",
-            "    main()\n",
-            "  File \"imagenet.py\", line 132, in main\n",
-            "    normalize,\n",
-            "  File \"/usr/local/lib/python3.6/dist-packages/torchvision/datasets/folder.py\", line 209, in __init__\n",
-            "    is_valid_file=is_valid_file)\n",
-            "  File \"/usr/local/lib/python3.6/dist-packages/torchvision/datasets/folder.py\", line 93, in __init__\n",
-            "    classes, class_to_idx = self._find_classes(self.root)\n",
-            "  File \"/usr/local/lib/python3.6/dist-packages/torchvision/datasets/folder.py\", line 122, in _find_classes\n",
-            "    classes = [d.name for d in os.scandir(dir) if d.is_dir()]\n",
-            "FileNotFoundError: [Errno 2] No such file or directory: 'path to dataset/train'\n"
+            "/usr/local/lib/python3.6/dist-packages/torchvision/transforms/transforms.py:220: UserWarning: The use of the transforms.Scale transform is deprecated, please use transforms.Resize instead.\n",
+            "  \"please use transforms.Resize instead.\")\n",
+            "=> creating model 'resnet18'\n",
+            "    Total params: 21.61M\n",
+            "\n",
+            "Epoch: [1 | 90] LR: 0.100000\n",
+            "\u001b[?25l\n"
           ],
           "name": "stdout"
         }
